--- a/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Details.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Details.cshtml
@@ -1,19 +1,20 @@
-﻿@{
-    ViewData["Title"] = "Index";
+﻿@using Application.DTOs
+@using Domain.Entities
+@using Infrastructure.Persistence.Actions
+@{
+    ViewData["Title"] = "Details";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
+@model (List<QuanLyNhanVien> quanLyNhanViens, PhongBanDTO PhongBanDTO)
 <div class="content-body">
-
     <div class="row page-titles mx-0">
         <div class="col p-md-0">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Phòng Ban</a></li>
+                <li class="breadcrumb-item"><a asp-controller="PhongBan" asp-action="Index">Phòng Ban</a></li>
                 <li class="breadcrumb-item active">Danh Sách Nhân Viên</li>
             </ol>
         </div>
     </div>
-    <!-- row -->
-
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
@@ -22,6 +23,7 @@
                         <div class="card-title row">
                             <div class="col-md-12 mb-4">
                                 <h3 class="td-center">DANH SÁCH NHÂN VIÊN TRONG PHÒNG BAN</h3>
+                                <h3 class="td-center">@Model.PhongBanDTO.TenPhongBan</h3>
                             </div>
                             <div class="col-md-4">
                                 <form class="navbar-form">
@@ -34,7 +36,7 @@
                                 </form>
                             </div>
                             <div class="col-md-8">
-                                <a href="#" style="float:right;">
+                                <a asp-controller="PhongBan" asp-action="Index" style="float:right;">
                                     <button class="btn btn-primary"><span style="margin-right: 10px">Trở về danh sách phòng ban</span><i class="fa fa-arrow-left"></i></button>
                                 </a>
                             </div>
@@ -53,32 +55,22 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td><img src="./product-img/3_Stripes_Jacquard_Polo_Shirt_Black.jpg" alt="" style="width:100%" ;=""></td>
-                                        <td> Mã Nhân Viên </td>
-                                        <td> Tên Nhân Viên </td>
-                                        <td> Phòng Ban </td>
-                                        <td> Chức vụ </td>
-                                        <td> Công Việc </td>
-                                        <td class="td-center">
-                                            <a href="#">
-                                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-close"></i></button>
-                                            </a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td><img src="./product-img/adidas_W.N.D._Primeblue_Jacket_Gold.jpg" alt="" style="width:100%" ;=""></td>
-                                        <td> Mã Nhân Viên </td>
-                                        <td> Tên Nhân Viên </td>
-                                        <td> Phòng Ban </td>
-                                        <td> Chức vụ </td>
-                                        <td> Công Việc </td>
-                                        <td class="td-center">
-                                            <a href="#">
-                                                <button type="button" class="btn btn-primary"><i class="fa fa-close"></i></button>
-                                            </a>
-                                        </td>
-                                    </tr>
+                                    @foreach (QuanLyNhanVien quanLyNhanVien in Model.quanLyNhanViens)
+                                    {
+                                        <tr>
+                                            <td><img src="./product-img/3_Stripes_Jacquard_Polo_Shirt_Black.jpg" alt="" style="width:100%" ;=""></td>
+                                            <td> @quanLyNhanVien.NhanVienId </td>
+                                            <td> @quanLyNhanVien.HoNhanVien @quanLyNhanVien.TenNhanVien </td>
+                                            <td> @quanLyNhanVien.TenPhongBan </td>
+                                            <td> @quanLyNhanVien.TenChuVu </td>
+                                            <td> @quanLyNhanVien.TenCongViec </td>
+                                            <td class="td-center">
+                                                <a href="#">
+                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#@(quanLyNhanVien.NhanVienId + "xoa")"><i class="fa fa-close"></i></button>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    }
                                 </tbody>
                             </table>
                         </div>
@@ -86,99 +78,24 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade bd-example-modal-lg" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h4 class="modal-title" id="exampleModalLongTitle" style="color:#7571f9;">Thông tin nhân viên</h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="col-md-4"><img src="../assets/img/3_Stripes_Jacquard_Polo_Shirt_Black.jpg" alt="" style="width:100%" ;=""></div>
-                            <div class="col-md-8">
-                                <div class="row">
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Mã nhân viên:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Họ tên nhân viên:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Phòng ban:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Chức vụ:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Công việc:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Lương căn bản:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Ngày sinh:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Nơi sinh:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Giới tính:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Địa chỉ:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">CMND/Thẻ căn cước:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Ngày cấp CMND/Thẻ căn cước:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Số điện thoại:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Email:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                </div>
-                            </div>
+        @foreach (QuanLyNhanVien quanLyNhanVien1 in Model.quanLyNhanViens)
+        {
+            <div class="modal fade" id="@(quanLyNhanVien1.NhanVienId + "xoa")" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;">Are you sure to delete this: </h3>
+                        </div>
+                        <div class="modal-footer" style="margin: auto;">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                            <form method="post" asp-controller="PhongBan" asp-action="RemoveNVPB">
+                                <button name="id" type="submit" class="btn btn-danger" value="@quanLyNhanVien1.NhanVienId">Yes, delete it !</button>
+                            </form>
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-                    </div>
                 </div>
             </div>
-        </div>
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;">Are you sure to delete this: </h3>
-                    </div>
-                    <div class="modal-footer" style="margin: auto;">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-                        <a href="#">
-                            <button type="button" class="btn btn-danger">Yes, delete it !</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        }
     </div>
     <!-- #/ container -->
 </div>
