Sửa lỗi Update, sửa database, thêm hình ảnh
29/11/2020

--- a/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/Index.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/Index.cshtml
@@ -72,7 +72,7 @@
                                             <td> @quanLyNhanVien.NhanVienId </td>
                                             <td> @quanLyNhanVien.HoNhanVien @quanLyNhanVien.TenNhanVien </td>
                                             <td> @quanLyNhanVien.TenPhongBan </td>
-                                            <td> @quanLyNhanVien.TenChuVu </td>
+                                            <td> @quanLyNhanVien.TenChucVu </td>
                                             <td> @quanLyNhanVien.TenCongViec </td>
                                             <td class="td-center">
                                                 <a href="#">
@@ -128,7 +128,7 @@
                                         </div>
                                         <div class="col-md-6" style="margin-bottom: 10px">
                                             <h6 style="color:#ea5774;font-weight:500;">Chức vụ:</h6>
-                                            <p> @quanLyNhanVien1.TenChuVu </p>
+                                            <p> @quanLyNhanVien1.TenChucVu </p>
                                         </div>
                                         <div class="col-md-6" style="margin-bottom: 10px">
                                             <h6 style="color:#ea5774;font-weight:500;">Công việc:</h6>
