--- a/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/Update.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/Update.cshtml
@@ -33,6 +33,17 @@
                                 <a asp-controller="QuanLyNhanVien" asp-action="Index" style="float:left;"><button class="btn btn-primary"><i class="fa fa-arrow-left" aria-hidden="true"></i> Quay lại</button></aasp-controller="QuanLyNhanVien"></a>
                             </div>
                         </div>
+                        @{
+                            string linkImg = "../images/user/";
+                            if (Model.quanLyNhanVien.HinhAnh != null)
+                            {
+                                linkImg += Model.quanLyNhanVien.HinhAnh;
+                            }
+                            else
+                            {
+                                linkImg += "form-user.png";
+                            }
+                        }
                         <form method="post" asp-controller="QuanLyNhanVien" asp-action="Update">
                             <div class="row">
                                 <div class="col-lg-12 mb-3"><h1>Sửa nhân viên @Model.quanLyNhanVien.NhanVienId</h1></div>
@@ -42,7 +53,7 @@
                                             <input type="file" class="inputfile" name="HinhAnh" id="your_picture" onchange="readURL(this);" data-multiple-caption="{count} files selected" multiple />
                                             <label for="your_picture">
                                                 <figure>
-                                                    <img src="~/images/user/form-user.png" alt="" class="your_picture_image">
+                                                    <img src="@linkImg" alt="" class="your_picture_image">
                                                 </figure>
                                                 <span class="file-button">chọn ảnh</span>
                                             </label>
@@ -79,7 +90,7 @@
                                             <div class="form-group">
                                                 <label for="chucvu">Chức vụ <span class="text-danger">*</span></label>
                                                 <select class="form-control" name="ChucVuId" required>
-                                                    <option value="@Model.quanLyNhanVien.ChucVuId">@Model.quanLyNhanVien.TenChuVu</option>
+                                                    <option value="@Model.quanLyNhanVien.ChucVuId">@Model.quanLyNhanVien.TenChucVu</option>
                                                     @foreach (ChucVuDTO chucVuDTO in Model.chucVuDTOs)
                                                     {
                                                         if (chucVuDTO.ChucVuId == @Model.quanLyNhanVien.ChucVuId)
@@ -260,7 +271,7 @@
                             </div>
                             <div class="form-group row">
                                 <div class="col-lg-12 td-center">
-                                     <button type="submit" class="btn btn-primary">Sửa nhân viên</button>
+                                    <button type="submit" class="btn btn-primary">Sửa nhân viên</button>
                                 </div>
                             </div>
                         </form>
