--- a/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Details.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Details.cshtml
@@ -64,11 +64,18 @@
                                             <td> @quanLyNhanVien.TenPhongBan </td>
                                             <td> @quanLyNhanVien.TenChuVu </td>
                                             <td> @quanLyNhanVien.TenCongViec </td>
-                                            <td class="td-center">
-                                                <a href="#">
+                                            @if (quanLyNhanVien.PhongBanId == "null")
+                                            {
+                                                <td class="td-center">
+                                                    <button type="button" class="btn btn-primary" disabled><i class="fa fa-close"></i></button>
+                                                </td>
+                                            }
+                                            else
+                                            {
+                                                <td class="td-center">
                                                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#@(quanLyNhanVien.NhanVienId + "xoa")"><i class="fa fa-close"></i></button>
-                                                </a>
-                                            </td>
+                                                </td>
+                                            }
                                         </tr>
                                     }
                                 </tbody>
@@ -78,23 +85,26 @@
                 </div>
             </div>
         </div>
-        @foreach (QuanLyNhanVien quanLyNhanVien1 in Model.quanLyNhanViens)
+        @if (Model.PhongBanDTO.PhongBanId != "null")
         {
-            <div class="modal fade" id="@(quanLyNhanVien1.NhanVienId + "xoa")" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;">Are you sure to delete this: </h3>
-                        </div>
-                        <div class="modal-footer" style="margin: auto;">
-                            <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-                            <form method="post" asp-controller="PhongBan" asp-action="RemoveNVPB">
-                                <button name="id" type="submit" class="btn btn-danger" value="@quanLyNhanVien1.NhanVienId">Yes, delete it !</button>
-                            </form>
+            @foreach (QuanLyNhanVien quanLyNhanVien1 in Model.quanLyNhanViens)
+            {
+                <div class="modal fade" id="@(quanLyNhanVien1.NhanVienId + "xoa")" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;">Bạn chắc chắn muốn xóa nhân viên<br />@quanLyNhanVien1.HoNhanVien @quanLyNhanVien1.TenNhanVien khỏi phòng ban? </h3>
+                            </div>
+                            <div class="modal-footer" style="margin: auto;">
+                                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                                <form method="post" asp-controller="PhongBan" asp-action="RemoveNVPB">
+                                    <button name="id" type="submit" class="btn btn-danger" value="@quanLyNhanVien1.NhanVienId">Yes, delete it !</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            }
         }
     </div>
     <!-- #/ container -->
