--- a/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Details.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Details.cshtml
@@ -6,6 +6,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 @model (List<QuanLyNhanVien> quanLyNhanViens, PhongBanDTO PhongBanDTO)
+    
 <div class="content-body">
     <div class="row page-titles mx-0">
         <div class="col p-md-0">
@@ -25,87 +26,124 @@
                                 <h3 class="td-center">DANH SÁCH NHÂN VIÊN TRONG PHÒNG BAN</h3>
                                 <h3 class="td-center">@Model.PhongBanDTO.TenPhongBan</h3>
                             </div>
-                            <div class="col-md-4">
-                                <form class="navbar-form">
-                                    <div class="input-group no-border">
-                                        <input type="search" value="" class="form-control" placeholder="Search...">
-                                        <button type="submit" class="btn btn-primary">
-                                            <i class="fa fa-search"></i>
-                                        </button>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="col-md-8">
-                                <a asp-controller="PhongBan" asp-action="Index" style="float:right;">
-                                    <button class="btn btn-primary"><span style="margin-right: 10px">Trở về danh sách phòng ban</span><i class="fa fa-arrow-left"></i></button>
+                            <div class="col-md-6">
+                                <a asp-controller="PhongBan" asp-action="Index">
+                                    <button class="btn btn-primary"><i class="fa fa-arrow-left"></i><span style="margin-left: 10px">Trở về danh sách phòng ban</span></button>
                                 </a>
                             </div>
+                            <div class="col-md-6">
+                                <button id="btnDel" type="button" class="btn btn-danger" data-toggle="modal" data-target="#confirmDel" style="float:right;" disabled>
+                                    <i class="fa fa-trash-o"></i><span style="margin-left: 10px">Xoá nhân viên khỏi phòng ban</span>
+                                </button>
+                            </div>
                         </div>
-                        <div class="table-responsive">
-                            <table class="table table-bordered table-hover">
-                                <thead class="text-primary">
-                                    <tr>
-                                        <th style="width:10%;" class="th-center-bold">Hình ảnh</th>
-                                        <th style="width:15%;" class="th-center-bold">Mã nhân viên</th>
-                                        <th style="width:20%;" class="th-center-bold">Tên nhân viên</th>
-                                        <th style="width:15%;" class="th-center-bold">Phòng ban</th>
-                                        <th style="width:15%;" class="th-center-bold">Chức vụ</th>
-                                        <th style="width:15%;" class="th-center-bold">Công việc</th>
-                                        <th style="width:10%;" class="th-center-bold">Xoá</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (QuanLyNhanVien quanLyNhanVien in Model.quanLyNhanViens)
-                                    {
+                        <form method="post" asp-controller="PhongBan" asp-action="RemoveMultiNVPB">
+                            <div class="table-responsive">
+                                <table id="DataTable" class="table table-bordered table-hover zero-configuration">
+                                    <thead class="text-primary">
                                         <tr>
-                                            <td><img src="./product-img/3_Stripes_Jacquard_Polo_Shirt_Black.jpg" alt="" style="width:100%" ;=""></td>
-                                            <td> @quanLyNhanVien.NhanVienId </td>
-                                            <td> @quanLyNhanVien.HoNhanVien @quanLyNhanVien.TenNhanVien </td>
-                                            <td> @quanLyNhanVien.TenPhongBan </td>
-                                            <td> @quanLyNhanVien.TenChuVu </td>
-                                            <td> @quanLyNhanVien.TenCongViec </td>
-                                            @if (quanLyNhanVien.PhongBanId == "null")
+                                            <th style="width:10%;" class="th-center-bold">Hình ảnh</th>
+                                            <th style="width:15%;" class="th-center-bold">Mã nhân viên</th>
+                                            <th style="width:20%;" class="th-center-bold">Tên nhân viên</th>
+                                            <th style="width:15%;" class="th-center-bold">Phòng ban</th>
+                                            <th style="width:15%;" class="th-center-bold">Chức vụ</th>
+                                            <th style="width:15%;" class="th-center-bold">Công việc</th>
+                                            @if (Model.PhongBanDTO.PhongBanId == "null")
                                             {
-                                                <td class="td-center">
-                                                    <button type="button" class="btn btn-primary" disabled><i class="fa fa-close"></i></button>
-                                                </td>
+                                                <th style="width:10%;" class="th-center-bold">Xoá<input type="checkbox" id="checkBoxAll" class="custom-checkbox" disabled style="margin-left: 5px;" /></th>
                                             }
                                             else
                                             {
-                                                <td class="td-center">
-                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#@(quanLyNhanVien.NhanVienId + "xoa")"><i class="fa fa-close"></i></button>
-                                                </td>
+                                                <th style="width:10%;" class="th-center-bold">Xoá<input type="checkbox" id="checkBoxAll" class="custom-checkbox" onclick="checkDel()" style="margin-left: 5px;" /></th>
                                             }
                                         </tr>
-                                    }
-                                </tbody>
-                            </table>
-                        </div>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (QuanLyNhanVien quanLyNhanVien in Model.quanLyNhanViens)
+                                        {
+                                            <tr>
+                                                <td><img src="~/product-img/3_Stripes_Jacquard_Polo_Shirt_Black.jpg" alt="" style="width:100%" ;=""></td>
+                                                <td> @quanLyNhanVien.NhanVienId </td>
+                                                <td> @quanLyNhanVien.HoNhanVien @quanLyNhanVien.TenNhanVien </td>
+                                                <td> @quanLyNhanVien.TenPhongBan </td>
+                                                <td> @quanLyNhanVien.TenChuVu </td>
+                                                <td> @quanLyNhanVien.TenCongViec </td>
+                                                @if (quanLyNhanVien.PhongBanId == "null")
+                                                {
+                                                    <td class="td-center">
+                                                        <input type="checkbox" name="NhanVienId" class="custom-checkbox" disabled />
+                                                    </td>
+                                                }
+                                                else
+                                                {
+                                                    <td class="td-center">
+                                                        <input type="checkbox" name="NhanVienId" value="@quanLyNhanVien.NhanVienId" class="custom-checkbox chkCheckBoxId" onclick="checkSingleDel()"/>
+                                                    </td>
+                                                }
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            </div>
+                            @if (Model.PhongBanDTO.PhongBanId != "null")
+                            {
+                                <div class="modal fade" id="confirmDel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h3 class="modal-title" id="exampleModalLabel" style="margin: auto; text-align: center;">Bạn chắc chắn muốn nhân viên đã chọn khỏi phòng ban?</h3>
+                                            </div>
+                                            <div class="modal-footer" style="margin: auto;">
+                                                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                                                    <button type="submit" class="btn btn-danger" value="Delete">Yes, delete it !</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+                        </form>
+                        
                     </div>
                 </div>
             </div>
         </div>
-        @if (Model.PhongBanDTO.PhongBanId != "null")
-        {
-            @foreach (QuanLyNhanVien quanLyNhanVien1 in Model.quanLyNhanViens)
-            {
-                <div class="modal fade" id="@(quanLyNhanVien1.NhanVienId + "xoa")" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;">Bạn chắc chắn muốn xóa nhân viên<br />@quanLyNhanVien1.HoNhanVien @quanLyNhanVien1.TenNhanVien khỏi phòng ban? </h3>
-                            </div>
-                            <div class="modal-footer" style="margin: auto;">
-                                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-                                <form method="post" asp-controller="PhongBan" asp-action="RemoveNVPB">
-                                    <button name="id" type="submit" class="btn btn-danger" value="@quanLyNhanVien1.NhanVienId">Yes, delete it !</button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }
-        }
+        
     </div>
     <!-- #/ container -->
 </div>
+
+<style>
+    input[type="checkbox"]:after {
+        border: 1px solid #7571f9 !important;
+        margin: auto !important;
+    }
+    #DataTable_filter .form-control {
+        border: 1px solid #7571f9;
+        border-radius: 0.5rem;
+    }
+
+    #DataTable_length .form-control {
+        border: 1px solid #7571f9;
+        border-radius: 0.5rem;
+    }
+</style>
+<script>
+    function checkDel() {
+        if ($("#checkBoxAll").is(":checked")) {
+            $(".chkCheckBoxId").prop("checked", true);
+            $("#btnDel").prop("disabled", false);
+        }
+        else {
+            $(".chkCheckBoxId").prop("checked", false);
+            $("#btnDel").prop("disabled", true);
+        }
+    }
+    function checkSingleDel() {
+        if ($(".chkCheckBoxId").is(":checked")) {
+            $("#btnDel").prop("disabled", false);
+        }
+        else {
+            $("#btnDel").prop("disabled", true);
+        }
+    }
+</script>
