Sửa database, thêm tính lương
6/12/2020

--- a/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -164,8 +164,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <i class="icon-note menu-icon"></i> <span class="nav-text">Orders</span>
+                        <a asp-controller="BangLuong" asp-action="Index">
+                            <i class="icon-note menu-icon"></i> <span class="nav-text">Bảng lương</span>
                         </a>
                     </li>
                     <li>
